fix image align center

--- a/src/js/components/Life/LifePinView.less
+++ b/src/js/components/Life/LifePinView.less
@@ -133,7 +133,7 @@
     iframe,
     img {
       display: block;
-      margin: 0 auto;
+      margin: 0.5em auto 0.5em auto;
       max-width: 100%;
       max-height: 500px;
       .isMobile({ width: 100% !important; });
@@ -141,8 +141,7 @@
     img.media-object {
       max-width: inherit;
     }
-    p,
-    img {
+    p {
       margin: 0.5em 0 0.5em 0;
     }
 
